--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "./setup-env.sh && react-scripts build",
+    "build": "echo \"REACT_APP_MAPS_API_KEY=$MAPS_API_KEY\" > .env && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
